--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,10 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm run test:ci
+    - name: Run tests if test files exist
+      run: |
+        if ls **/*.test.* **/*.spec.* 1> /dev/null 2>&1; then
+          npm run test:ci
+        else
+          echo "No test files found, skipping tests"
+        fi
